--- a/AeroGear-TODO/Podfile
+++ b/AeroGear-TODO/Podfile
@@ -1,8 +1,8 @@
 xcodeproj 'AeroGear-TODO.xcodeproj'
 
-platform :ios
+platform :ios, '5.0'
 
-pod 'AeroGear', '1.0.1'
+pod 'AeroGear', '1.1.0'
 
 pod 'PullToRefresh', '0.0.1'
 pod 'SVProgressHUD', '0.8'
